# register-rs

./: .gitignore  Cargo.toml  db.sql  flake.nix  readme.md
.cargo/: config
.github/workflows/: release.yml  test.yml
register-rs-backend/: Cargo.toml  db.sql
register-rs-backend/src/: items.rs  lib.rs  receipts.rs  summary.rs
register-rs-backend/src/items/: category.rs
register-rs-backend/src/receipts/: payments.rs  print.rs
register-rs-backend/src/summary/: save.rs
src/: .main.rs.swp  calc.rs  config.rs  error.rs  grid.rs  helper.rs  icons.rs  item.rs  main.rs  payment.rs  print.rs  receipt.rs  reciept.rs  styles.rs  theme.rs
src/item/: category.rs  component.rs  mod.rs
src/screens/: info.rs  manager.rs  menu.rs  mod.rs  transactions.rs
src/screens/manager/: item.rs  mod.rs
src/screens/menu/: item.rs  mod.rs
src/screens/sales/: mod.rs  save.rs
src/screens/transactions/: item.rs  mod.rs
src/widgets/: buttonscroller.rs  calc.rs  clickable.rs  date_picker.rs  grid.rs  mod.rs  numberinput.rs  receipt.rs  reciept.rs  square_button.rs  textinput.rs
