[package]
name = "smalands-rs"
version = "0.9.2"
authors = ["axel paulander <axel.paulander@gmail.com>"]
edition = "2021"

[features]
default = []
update = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
giftwrap = "0.5.0"
chrono = "0.4.38"
dirs = "5.0.1"
iced_core = "0.12.0"
lazy_static = "1.4.0"
rusqlite_migration = "1.1.0"
futures = "0.3.30"

frost = {git = "https://github.com/Strosel/frost", tag="v0.12.0"}

[dependencies.self_update]
version = "0.39.0"
default-features = false
features = ["rustls", "archive-zip", "compression-zip-deflate"]

[dependencies.iced]
version = "0.12.1"
features = [
    "canvas", 
    "tokio", 
    "image",
    "lazy"
]

[dependencies.rusqlite]
version = "0.30.0"
features = ["chrono", "bundled"]

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw"
rev = "1c4765d2f907e0256ebc5e7e8d513729e87c063f"
default-features = false
features = [
    "tab_bar", 
    "tabs", 
    "modal", 
    "card", 
    "number_input", 
    "date_picker",
    "badge",
    "wrap",
]

[dependencies.genpdf]
version = "0.2.0"
features = ["images"]

[dependencies.indexmap]
version = "2.2.3"
features = ["serde"]

[dependencies.tokio]
version = "1.36.0"
features = ["sync"]

# Metadata

[workspace.metadata.workspaces]
no_individual_tags = true
