[package]
name = "smalands-rs"
version = "0.10.2"
authors = ["axel paulander <axel.paulander@gmail.com>"]
edition = "2024"

[features]
default = []
update = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_core = "0.12.0"
lazy_static = "1.4.0"
futures = "0.3.30"

frost = {git = "https://github.com/Strosel/frost", tag="v0.12.0"}
backend.workspace = true
tokio.workspace = true
giftwrap.workspace = true
chrono.workspace = true
indexmap.workspace = true
strum.workspace = true
dirs.workspace = true

[dependencies.self_update]
version = "0.42.0"
default-features = false
features = ["rustls", "archive-zip", "compression-zip-deflate"]

[dependencies.iced]
version = "0.12.1"
features = [
    "canvas", 
    "tokio", 
    "image",
    "lazy"
]

[dependencies.iced_aw]
version = "0.9"
default-features = false
features = [
    "tab_bar", 
    "tabs", 
    "modal", 
    "card", 
    "number_input", 
    "date_picker",
    "badge",
    "wrap",
]

[workspace]
members = ["register-rs-backend"]

[workspace.dependencies]
backend = { path = "./register-rs-backend", package="register-rs-backend" }
tokio = { version = "1.44.0", features = ["sync"]}
giftwrap = "0.5.0"
chrono = "0.4.40"
indexmap = { version = "2.9", features = ["std", "serde"] }
strum = { version = "0.27", features = ["derive"] }
dirs = "5.0.1"

# Metadata
[workspace.metadata.workspaces]
no_individual_tags = true
