[package]
name = "register-rs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["chrono", "bundled"] }
rusqlite_migration = "1.3"
strum = { version = "0.27", features = ["derive"] }

tokio.workspace = true
giftwrap.workspace = true
chrono.workspace = true

[dependencies.indexmap]
version = "2.9"
features = ["std", "serde"]

