[package]
name = "register-rs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["chrono", "bundled"] }
rusqlite_migration = "1.3"
getset = "0.1"
genpdf = { version = "0.2.0", features = ["images"] }

strum.workspace = true
tokio.workspace = true
giftwrap.workspace = true
chrono.workspace = true
indexmap.workspace = true
dirs.workspace = true
